# calls

./: Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
mysite/: db.sqlite3
mysite/calls/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/calls/migrations/: 0001_initial.py  0002_alter_category_options_alter_category_cost.py  0002_auto_20190130_1811.py  0003_alter_category_line.py  0003_auto_20190130_1853.py  0004_auto_20190130_1900.py  0004_call_created_on_call_updated_on_alter_category_line.py  0005_alter_call_options.py  0005_auto_20190130_2011.py  0006_auto_20190203_1119.py  0007_alter_call_id_alter_type_cost_alter_type_id.py
mysite/calls/static/calls/: style.css
mysite/calls/templates/calls/: call_confirm_delete.html  call_create_form.html  call_list.html  call_update_form.html  detail.html  form.html  index.html  list.html
mysite/calls/tests/: test_models.py  test_views.py
mysite/mysite/: settings.py  urls.py
mysite/templates/includes/: pagination.html
mysite/templates/layouts/: base.html
