[tool.poetry]
name = "calls"
version = "0.1.0"
description = "A web application to manager international phone calls"
authors = ["Gurupratap Matharu <gurupratap.matharu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
django = "^4.2.3"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.280"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
