[tool.poetry]
name = "calls"
version = "0.1.0"
description = "A web application to manager international phone calls"
authors = ["Gurupratap Matharu <gurupratap.matharu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
django = "^4.2.3"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.280"
isort = "^5.12.0"
djlint = "^1.32.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
exclude = [
    "*migrations*",
    ]

[tool.isort]
profile = "black"
skip = ["docs", "migrations"]
known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.black]
exclude = '''
/(
  | migrations
)/
'''

[tool.djlint]
exclude = ".venv,venv,.tox,.eggs,.git"
extend_exclude = ".custom"
blank_line_before_tag = "load,extends,include,block"
blank_line_after_tag = "load,extends,include,endblock"
profile = "django"
max_line_length = 120
max_attribute_length = 120
use_gitignore = true
format_attribute_template_tags = true

[tool.djlint.css]
indent_size = 5

[tool.djlint.js]
indent_size = 5

[tool.coverage.run]
branch = true
omit = [
    # omit anything in a migrations directory anywhere
    "*/migrations/*",
    # omit the tests themselfves
    "*/tests/*",
    # omit everything in /usr
    "/usr/*",
    # omit these single files
    "main/asgi.py",
    "main/wsgi.py",
    "main/settings.py",
    "manage.py",
    "*/urls.py",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.html]
show_contexts = true
